--- a/content/projects/illuminate/index.mdx
+++ b/content/projects/illuminate/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Illuminate: AI-Generated Educational Videos"
+title: "Illuminate"
 description: "Generate personalized animated educational videos for any topic using AI and LangChain"
 technologies: ["LangChain", "React", "FastAPI", "Manim", "AWS", "OpenAI", "Python", "JavaScript"]
 date: "February 2025"
@@ -15,7 +15,7 @@ import {
   RightColumn
 } from '@/components/content';
 
-# Illuminate: AI-Generated Educational Videos
+# Illuminate
 
 An AI-powered platform that transforms any topic into engaging, animated educational videos with voiceover explanations and interactive quizzes.
 
@@ -137,7 +137,3 @@ The next phase of development includes:
 ## Conclusion
 
 Illuminate demonstrates how AI can democratize high-quality educational content creation, transforming any topic into an engaging learning experience through automated video generation and interactive assessment. As we continue developing the platform, we're excited about the potential to make personalized, animated educational content as accessible as asking a question.
-
----
-
-**Built with:** LangChain, React, FastAPI, Manim, AWS, OpenAI, Python, JavaScript
